[gd_scene load_steps=11 format=3 uid="uid://b14tu61wo85g4"]

[ext_resource type="Shader" path="res://Resources/shaders/DamageFlash.gdshader" id="1_afdpd"]
[ext_resource type="Texture2D" uid="uid://bxlkvyq350q6w" path="res://Assets/snowyWolf/Wolf-Sheet.png" id="2_wdx37"]
[ext_resource type="Texture2D" uid="uid://dphhx5ogt4k7o" path="res://Assets/player/player_shadow.png" id="3_vo23y"]
[ext_resource type="Script" path="res://scripts/hit & hurt boxes/Hurtbox.gd" id="4_3sjfa"]
[ext_resource type="Script" path="res://scripts/health_component/health_component.gd" id="5_udyh7"]
[ext_resource type="Script" path="res://scripts/hit & hurt boxes/hitbox.gd" id="6_3374k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hkt0b"]
shader = ExtResource("1_afdpd")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_range = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ncpm1"]
radius = 6.45
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snd0x"]
size = Vector2(30, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3xt1"]
size = Vector2(30, 19)

[node name="SnowyBoss" type="CharacterBody2D"]

[node name="Character" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_hkt0b")
scale = Vector2(1.5, 1.5)

[node name="Sprite2D" type="Sprite2D" parent="Character"]
position = Vector2(0, -11)
texture = ExtResource("2_wdx37")
region_enabled = true
region_rect = Rect2(0, 0, 48, 48)

[node name="Aim" type="Marker2D" parent="Character/Sprite2D"]
position = Vector2(10, -3.66667)
gizmo_extents = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ncpm1")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.858824)
show_behind_parent = true
position = Vector2(-1.5, -6)
scale = Vector2(2.4375, 1.5)
texture = ExtResource("3_vo23y")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, -11)
script = ExtResource("4_3sjfa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_snd0x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DecideTimer" type="Timer" parent="."]

[node name="StunTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Health" type="Node" parent="."]
script = ExtResource("5_udyh7")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, -11)
script = ExtResource("6_3374k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_t3xt1")
