[gd_scene load_steps=2 format=3 uid="uid://bow3opjc4bcwh"]

[ext_resource type="Script" path="res://scripts/hit & hurt boxes/Hurtbox.gd" id="1_1kd60"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_1kd60")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
